Modified Attr, SubAttr models
